  - Backend Nation UUID Implementation, courtesy of silverwolfg11 with PR #4608.
    - Continues the progress of changing the Towny objects over to maps based on UUIDs rather than names.
  - Fix titles, surnames and nation ranks resetting.
0.96.5.10:
  - Fix teleport queue not replacing previous warmups.
    - Should help out Tuinity and PurPur servers who have seen warmups stacking.
    - Closes #4624.
  - Fix debt account conversion on servers that use TheNewEconomy.
  - Fix /n deposit [amount] [town] going into the specified town bank rather than the town bank of the depositor, courtesy of Momshroom with PR #4651.
  - Fix towns being able to go over the maximum residents, courtesy of Warriorrrr with PR #4650.
  - Automatically add SHEARS to the global_town_settings.farm_plot_allow_blocks list in the config.
    - Closes #4652.
0.96.5.11:
  - Fix possible NPE in TownyPlayerListener.
  - API: Added NationZoneTownBlockStatusEvent
    - A cancellable event thrown when a townblockstatus would return a NationZone result.
    - Cancelling this will have Towny return a UnclaimedZone result instead.
  - New Config Option: economy.bankruptcy.nation_tax.does_nation_tax_delete_conquered_towns_that_cannot_pay
    - Default: false
    - Does a conquered town which cannot pay the nation tax get deleted?
  - API: Added PreTownPaysNationTaxEvent
    - A cancellable event that precedes a town paying the nation tax.
    - Also allows you to alter the amount a town would pay in tax.
  - API: Add StatusScreenEvents
    - ResidentStatusScreenEvent, TownStatusScreenEvent, NationStatusScreenEvent
    - Makes it possible to add additional lines to the above objects' status screens.
  - Plot perm hud now shows full town name, courtesy of Warriorrrr with PR #4655.
0.96.5.12:
  - API: TownUnconquerEvent
    - Cancellable event allowing a plugin to prevent a town losing its conquered/occupied status.
  - Bump language files to 0.96.