@@ -203,9 +203,9 @@ public class OnPlayerLogin implements Runnable {
 					 */
 					if(TownySettings.isTownBankruptcyEnabled()) {
 						if (!town.isBankrupt()) //Is town already bankrupt?
-							TownyMessaging.sendMessage(resident, Translation.of("msg_warning_bankrupt", town.getName()));
+							TownyMessaging.sendMsg(resident, Translation.of("msg_warning_bankrupt", town.getName()));
 					} else {
-						TownyMessaging.sendMessage(resident, Translation.of("msg_warning_delete", town.getName()));
+						TownyMessaging.sendMsg(resident, Translation.of("msg_warning_delete", town.getName()));
 					}
 				}
 			} catch (EconomyException ex) {
@@ -220,7 +220,7 @@ public class OnPlayerLogin implements Runnable {
 					/*
 					 *  Warn that the nation is due to be deleted.
 					 */
-					TownyMessaging.sendMessage(resident, Translation.of("msg_warning_delete", nation.getName()));
+					TownyMessaging.sendMsg(resident, Translation.of("msg_warning_delete", nation.getName()));
 				}
 			} catch (EconomyException ex) {
 				// Economy error, so ignore it and try to continue.
