@@ -5672,3 +5672,6 @@ v0.92.0.11:
   - API: TownUnconquerEvent
     - Cancellable event allowing a plugin to prevent a town losing its conquered/occupied status.
   - Bump language files to 0.96.
+  - Fix colour being stripped from warning messages on login.
+    - Closes #4662.
+  - Fix config mentioning a config section which doesn't exist any more.
